templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/Contact_Enrichment_Suggestion__c.object-meta.xml
<CustomObject>
    <description>AI-generated suggestions for updating stale Contact data based on external enrichment signals (e.g. live web search and, where available, LinkedIn or ZoomInfo). Users review and accept or dismiss each suggestion. This is a workflow/audit object and is not part of any managed package.</description>
    <label>Contact Enrichment Suggestion</label>
    <nameField>
        <displayFormat>CES-{0000}</displayFormat>
        <label>Suggestion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Enrichment Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>