templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Classification of the type of enrichment change being suggested.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title_Change</fullName>
                <label>Title Change</label>
            </value>
            <value>
                <fullName>Status_Change</fullName>
                <label>Status Change</label>
            </value>
            <value>
                <fullName>Department_Change</fullName>
                <label>Department Change</label>
            </value>
            <value>
                <fullName>Contact_Info</fullName>
                <label>Contact Info</label>
            </value>
            <value>
                <fullName>Role_Change</fullName>
                <label>Role Change</label>
            </value>
            <value>
                <fullName>Company_Change</fullName>
                <label>Company Change</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>