templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>AI confidence score (1-100) for the suggested change.</description>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>