templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The Contact record this enrichment suggestion applies to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrichment Suggestions</relationshipLabel>
    <relationshipName>Enrichment_Suggestions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>