templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <description>The value currently stored in Salesforce for the target field.</description>
    <label>Current Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>