templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Dismiss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismiss_Reason__c</fullName>
    <description>Reason the rep dismissed this enrichment suggestion. Used for reporting on suggestion quality and rep feedback.</description>
    <label>Dismiss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Correct</fullName>
            </value>
            <value>
                <fullName>Suggestion Inaccurate</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
            <value>
                <fullName>Source Outdated</fullName>
            </value>
            <value>
                <fullName>Duplicate Contact</fullName>
            </value>
            <value>
                <fullName>No Longer Relevant</fullName>
            </value>
            <value>
                <fullName>Will Verify Manually</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>