templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Dismiss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Dismiss_Reason_Detail__c</fullName>
    <description>Free-text detail for the dismiss reason. Required by the widget only when the rep selects "Other".</description>
    <label>Dismiss Reason Detail</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>