templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the Contact field this suggestion targets (e.g. Title, Department).</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>