templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Human-readable label of the Contact field for display in the widget.</description>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>