templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>AI-generated explanation of why this change is recommended.</description>
    <label>Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>