templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <description>User who accepted or dismissed this suggestion.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Enrichment_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>