templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>Date and time the suggestion was accepted or dismissed.</description>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>