templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>External data source that provided the suggested value.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Web_Search</fullName>
                <label>Web Search</label>
            </value>
            <value>
                <fullName>Company_Website</fullName>
                <label>Company Website</label>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Internal_Analysis</fullName>
                <label>Internal Analysis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>