templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Review status of this enrichment suggestion.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>