templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/fields/Suggested_Value__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Value__c</fullName>
    <description>The value suggested by the external enrichment source.</description>
    <label>Suggested Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>