templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Suggested_Value__c</columns>
    <columns>Source__c</columns>
    <columns>Confidence__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>