templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/listViews/All_Pending.listView-meta.xml
<ListView>
    <fullName>All_Pending</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Suggested_Value__c</columns>
    <columns>Source__c</columns>
    <columns>Confidence__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>All Pending Suggestions</label>
    <language>en_US</language>
</ListView>