templates/force-app/main/default/objects/Contact_Enrichment_Suggestion__c/listViews/Recently_Accepted.listView-meta.xml
<ListView>
    <fullName>Recently_Accepted</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Suggested_Value__c</columns>
    <columns>Source__c</columns>
    <columns>Reviewed_Date__c</columns>
    <columns>Reviewed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Recently Accepted</label>
    <language>en_US</language>
</ListView>